Before adding new profiles